--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// signup_page
+.signup_page {
+  width: 500px;
+  margin: 0 auto;
+  text-align: center;
+}
+.btn {
+  width: 250px;
+}
