--- a/app/views/static_pages/signup_page.html.erb
+++ b/app/views/static_pages/signup_page.html.erb
@@ -1,17 +1,17 @@
 <div class="signup_page">
   <div class="row">
     <a href="/auth/facebook", class="signup_btn">
-      <div class="btn btn-primary btn-lg">Facebookでログイン</div>
+      <div class="btn btn-primary btn-lg">Facebookで登録</div>
     </a>
   </div>
   <div class="row">
     <a href="/auth/line", class="signup_btn">
-      <div class="btn btn-success btn-lg">LINEでログイン(not yet)</div>
+      <div class="btn btn-success btn-lg">LINEで登録(not yet)</div>
     </a>
   </div>
   <div class="row">
     <a href="/signup", class="signup_btn">
-      <div class="btn btn-default btn-lg">メールアドレスでログイン</div>
+      <div class="btn btn-default btn-lg">メールアドレスで登録</div>
     </a>
   </div>
 </div>
