--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,13 +1,15 @@
 <% provide(:title, "Forgot password") %>
-<h1>Forgot password</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <div>ご登録のメールアドレスにパスワード再設定メールを送信します。</div>
+    <div>メール本文のURLからパスワードを再設定してください。</div>
+    
     <%= form_for(:password_reset, url: password_resets_path) do |f| %>
-      <%= f.label :email %>
+      <%= f.label :email, "ご登録のメールアドレス" %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.submit "Submit", class: "btn btn-primary" %>
+      <%= f.submit "送信する", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
