--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
         <div class="header-item"><%= link_to "ログアウト", logout_path, method: :delete %></div>
       <% else %>
         <div class="header-item"><%= link_to "モデル会員登録", signup_page_path %></div>
-        <div class="header-item"><%= link_to "美容師会員登録", staff_signup_path %></div>
+        <div class="header-item"><%= link_to "美容師会員登録", staff_signup_page_path %></div>
         <div class="header-item"><%= link_to "ログイン", login_path %></div>
       <% end %>
     </div>
@@ -33,7 +33,7 @@
         <div class="header-item-hm"><%= link_to "ログアウト", logout_path, method: :delete %></div>
       <% else %>
         <div class="header-item-hm"><%= link_to "モデル会員登録", signup_page_path %></div>
-        <div class="header-item-hm"><%= link_to "美容師会員登録", staff_signup_path %></div>
+        <div class="header-item-hm"><%= link_to "美容師会員登録", staff_signup_page_path %></div>
         <div class="header-item-hm"><%= link_to "ログイン", login_path %></div>
       <% end %>
     </div>
