--- a/app/views/static_pages/staff_signup_page.html.erb
+++ b/app/views/static_pages/staff_signup_page.html.erb
@@ -5,8 +5,8 @@
     </a>
   </div>
   <div class="row">
-    <a href="/auth/line", class="signup_btn">
-      <div class="btn btn-success btn-lg">LINEで登録(not yet)</div>
+    <a href="/auth/google_oauth2", class="signup_btn">
+      <div class="btn btn-danger btn-lg">Googleで登録</div>
     </a>
   </div>
   <div class="row">
