--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,11 +13,7 @@
   position: relative;
   right: 0;
   left: 0;
-  // アニメーション
-  // overflow: hidden;
-  // position: relative;
 
-  //
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -33,24 +29,33 @@
   align-items: center;
 }
 
-// .first-view:before,
-// .first-view:after {
-//   animation: 2s cubic-bezier(.4, 0, .2, 1) forwards;
-//   background: #fff;
-//   content: '';
-//   left: 0;
-//   pointer-events: none;
-//   position: absolute;
-//   right: 0;
-//   z-index: 1;
-// }
-//
-// .first-view:before {
-//   animation-name: img-wrap-before;
-//   top: 0;
-// }
-
 .first-view-text {
   font-size: 1.5em;
   color: white;
+}
+.line-1 {
+  position: relative;
+  top: 50%;
+  width: 8em;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255,255,255,.75);
+  font-size: 180%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);
+}
+
+/* Animation */
+.anim-typewriter {
+  animation: typewriter 1.3s steps(15) 1s 1 normal both,
+  blinkTextCursor 400ms steps(15) infinite normal;
+}
+@keyframes typewriter {
+  from { width: 0; }
+  to { width: 8em; }
+}
+@keyframes blinkTextCursor {
+  from { border-right-color: rgba(255,255,255,.75); }
+  to { border-right-color: transparent; }
 }
