--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="first-view">
-  <p class="first-view-text">
+  <div class="line-1 anim-typewriter first-view-text">
     無料で髪を切ろう
-  </p>
+  </div>
 </div>
