--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -129,8 +129,8 @@
           <label for="radio07" class="radio">直毛</label>
           <%= f.radio_button :hair_type, "ややクセ毛", id: "radio08" %>
           <label for="radio08" class="radio">ややクセ毛</label>
-          <%= f.radio_button :hair_type, "強いクセ毛", id: "radio09" %>
-          <label for="radio09" class="radio">強いクセ毛</label>
+          <%= f.radio_button :hair_type, "クセ毛", id: "radio09" %>
+          <label for="radio09" class="radio">クセ毛</label>
         </div>
       </div>
 
