画像複数枚

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,42 +4,46 @@
   <aside class="col-md-4 col-xs-4">
     <% if @user.thumbnails.count > 0 %>
 
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
+      <div id="test-carousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+
+        <!-- 何枚目かの画像かを表すインディケーター -->
         <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#test-carousel" data-slide-to="0" class="active"></li>
           <% unless @user.thumbnails[1].nil? %>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#test-carousel" data-slide-to="1" class=""></li>
           <% end %>
           <% unless @user.thumbnails[2].nil? %>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#test-carousel" data-slide-to="2" class=""></li>
           <% end %>
         </ol>
-        <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-            <div class="item active">
-              <%= image_tag @user.thumbnails[0].image_url, class: "thumbnail" %>
-            </div>
-            <% unless @user.thumbnails[1].nil? %>
-              <div class="item">
-                <%= image_tag @user.thumbnails[1].image_url, class: "thumbnail" %>
-              </div>
-            <% end %>
-            <% unless @user.thumbnails[2].nil? %>
-              <div class="item">
-                <%= image_tag @user.thumbnails[2].image_url, class: "thumbnail" %>
-              </div>
-            <% end %>
+
+        <!-- 実際の画像の表示処理 -->
+        <div class="carousel-inner">
+          <div class="item active">    <!-- activeをつけたものがページ表示時に表示される -->
+            <%= cl_image_tag(@user.thumbnails[0].image_url(:thumbnail), :width => 300, :height => 300) %>
+
           </div>
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-          <!-- <span class="glyphicon glyphicon-chevron-left"></span> -->
-          <span>←</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-          <!-- <span class="glyphicon glyphicon-chevron-right"></span> -->
-          <span>→</span>
-        </a>
+          <% unless @user.thumbnails[1].nil? %>
+            <div class="item">
+              <%= image_tag @user.thumbnails[1].image_url(:thumbnail), class: "carousel-thumbnail" %>
+            </div>
+          <% end %>
+          <% unless @user.thumbnails[2].nil? %>
+            <div class="item">
+              <%= image_tag @user.thumbnails[2].image_url(:thumbnail), class: "carousel-thumbnail" %>
+            </div>
+          <% end %>
+        </div>
+        <% unless @user.thumbnails[1].nil? %>
+          <!-- 前の画像へ戻るための矢印ポインタ -->
+          <a class="left carousel-control" href="#test-carousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <!-- 次の画像へ進むための矢印ポインタ -->
+          <a class="right carousel-control" href="#test-carousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+        <% end %>
       </div>
     <% else %>
       <%= image_tag '/no-image.png', class: "no-image"%>
