--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,16 @@
 <header>
   <div class="header-fix">
-    <%= link_to "Hairiah", root_path, id: "logo" %>
+    <%= link_to "Hairiah", root_path, class: "logo visible-xl" %>
     <div class="hamburger-open-btn">
+      <span class="logo">Hairiah</span>
       <i class="fa fa-chevron-down"></i>
     </div>
     <div class="hamburger-close-btn">
+      <span class="logo">Hairiah</span>
       <i class="fa fa-chevron-up"></i>
     </div>
     <div  class="header-items">
+      <div class="header-item"><%= link_to "ホーム", root_path %></div>
       <div class="header-item"><%= link_to "モデル募集掲示板", microposts_path %></div>
       <% if logged_in? %>
         <div class="header-item"><%= link_to "美容師を探す", staffs_path %></div>
