--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <div class="header-fix">
-    <%= link_to "Hairiah", root_path, class: "logo visible-xl" %>
+    <%= link_to "Hairiah", root_path, class: "logo visible-xl" %></span>
     <div class="hamburger-open-btn">
       <span class="logo">Hairiah</span>
       <i class="fa fa-chevron-down"></i>
@@ -10,7 +10,6 @@
       <i class="fa fa-chevron-up"></i>
     </div>
     <div  class="header-items">
-      <div class="header-item"><%= link_to "ホーム", root_path %></div>
       <div class="header-item"><%= link_to "モデル募集掲示板", microposts_path %></div>
       <% if logged_in? %>
         <div class="header-item"><%= link_to "美容師を探す", staffs_path %></div>
@@ -26,7 +25,7 @@
     </div>
   </div>
   <div class="hamburger-menu">
-
+      <div class="header-item-hm"><%= link_to "ホーム", root_path %></div>
       <div class="header-item-hm"><%= link_to "モデル募集掲示板", microposts_path %></div>
       <% if logged_in? %>
         <div class="header-item-hm"><%= link_to "美容師を探す", staffs_path %></div>
