--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,21 +1,28 @@
 @import "global";
 
 // signup_page
-.signup_page {
-  width: 500px;
-  @include mq-down() {
-    width: 100%;
-    padding: 0 20%;
+.signup-container {
+  width: 100%;
+  padding: 30px 10% 0 10%;
+  @include mq-up() {
+    width: 600px;
+    padding: 30px 0;
   }
   margin: 0 auto;
   text-align: center;
 }
+.signup-sns-btn {
+  margin-bottom: 30px;
+}
 .btn {
-  width: 250px;
-  @include mq-down() {
-    width: 100%;
-  }
+  width: 100%;
 }
 .btn-lg, .btn-group-lg > .btn {
   font-size: 16px;
+}
+.form-align-left {
+  text-align: left;
+}
+.form-align-right {
+  text-align: right;
 }
