--- a/app/views/static_pages/signup_page.html.erb
+++ b/app/views/static_pages/signup_page.html.erb
@@ -1,10 +1,10 @@
-<div class="signup_page">
-  <div class="row">
+<div class="signup-container">
+  <div class="row signup-sns-btn">
     <a href="/auth/facebook", class="signup_btn">
       <div class="btn btn-primary btn-lg">Facebookで登録</div>
     </a>
   </div>
-  <div class="row">
+  <div class="row signup-sns-btn">
     <a href="/auth/google_oauth2", class="signup_btn">
       <div class="btn btn-danger btn-lg">Googleで登録</div>
     </a>
