--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,191 +1,185 @@
 <h1>新規会員登録</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-      <div class="row">
-        <div class="form-group">
+<div class="signup-container">
+  <%= form_for(@user) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :name, "お名前/ニックネーム" %>
           <span class="required">※必須</span>
-          <%= f.text_field :name, class: 'form-control input-lg' %>
         </div>
+        <%= f.text_field :name, class: 'form-control input-lg' %>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="form-group">
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :birth, "生年月日" %>
           <span class="required">※必須</span>
-          <div class="form-inline hidden-sp">
-            <%= raw sprintf(
-              f.date_select(
-                :birth,
-                {
-                  start_year: 1951,
-                  end_year: Time.zone.now.year,
-                  default: Time.zone.now.ago(25.years),
-                  use_two_digit_numbers: true,
-                  date_separator: '%s'
-                },
-                { class: 'form-control input-lg' }
-              ),
-              '年 ', '月 ') + '日'
-            %>
-          </div>
-          <div class="form-inline visible-sp">
-            <%= raw sprintf(
-              f.date_select(
-                :birth,
-                {
-                  start_year: 1951,
-                  end_year: Time.zone.now.year,
-                  default: Time.zone.now.ago(25.years),
-                  use_two_digit_numbers: true
-                },
-                { class: 'form-control input-lg' }
-              )
-              )
-            %>
-          </div>
+        </div>
+        <div class="form-inline hidden-sp">
+          <%= raw sprintf(
+            f.date_select(
+              :birth,
+              {
+                start_year: 1951,
+                end_year: Time.zone.now.year,
+                default: Time.zone.now.ago(25.years),
+                use_two_digit_numbers: true,
+                date_separator: '%s'
+              },
+              { class: 'form-control input-lg' }
+            ),
+            '年 ', '月 ') + '日'
+          %>
+        </div>
+        <div class="form-inline visible-sp">
+          <%= raw sprintf(
+            f.date_select(
+              :birth,
+              {
+                start_year: 1951,
+                end_year: Time.zone.now.year,
+                default: Time.zone.now.ago(25.years),
+                use_two_digit_numbers: true
+              },
+              { class: 'form-control input-lg' }
+            )
+            )
+          %>
         </div>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :sex, "性別" %>
-            <span class="required">※必須</span>
-          </div>
-          <div class="radio-inline">
-            <%= f.radio_button :sex, "女性", id: "radio01" %>
-            <label for="radio01" class="radio">女性</label>
-          </div>
-          <div class="radio-inline">
-            <%= f.radio_button :sex, "男性", id: "radio02" %>
-            <label for="radio02" class="radio">男性</label>
-          </div>
-
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :sex, "性別" %>
+          <span class="required">※必須</span>
+        </div>
+        <div class="radio-inline">
+          <%= f.radio_button :sex, "女性", id: "radio01" %>
+          <label for="radio01" class="radio">女性</label>
+        </div>
+        <div class="radio-inline">
+          <%= f.radio_button :sex, "男性", id: "radio02" %>
+          <label for="radio02" class="radio">男性</label>
         </div>
 
       </div>
-      <script>
-        $(function() {
-          $('#user_prefecture_id').change(function() {
-            var prefecture_id = $("#user_prefecture_id").val();
-            if (prefecture_id !== "") {
-              $.get("<%= prefectures_areas_path %>",
-                { prefecture_id: prefecture_id },
-                function(data){ }
-              );
-            }
-          });
+
+    </div>
+    <script>
+      $(function() {
+        $('#user_prefecture_id').change(function() {
+          var prefecture_id = $("#user_prefecture_id").val();
+          if (prefecture_id !== "") {
+            $.get("<%= prefectures_areas_path %>",
+              { prefecture_id: prefecture_id },
+              function(data){ }
+            );
+          }
         });
-      </script>
+      });
+    </script>
 
-      <div class="row">
-        <div class="form-group">
-          <%= f.fields_for :thumbnails do |thumbnail| %>
-            <%= thumbnail.file_field :image, class: " input-lg" %>
-          <% end %>
-        </div>
+    <div class="row">
+      <div class="form-group">
+        <%= f.fields_for :thumbnails do |thumbnail| %>
+          <%= thumbnail.file_field :image, class: " input-lg" %>
+        <% end %>
       </div>
-      <div class="row">
-        <div class="form-group">
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :prefecture_id, "都道府県" %>
           <span class="required">※必須</span>
           <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {selected: 12}, class: 'form-control input-lg' %>
         </div>
       </div>
-      <div class="row">
-        <div class="form-group">
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :area_id, "市区町村" %>
           <span class="required">※必須</span>
-          <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg' %>
         </div>
+        <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg' %>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :hair_style, "現在の髪型" %>
-          </div>
-          <%= f.radio_button :hair_style, "ベリーショート", id: "radio03-1" %>
-          <label for="radio03-1" class="radio">ベリーショート</label>
-          <%= f.radio_button :hair_style, "ショート", id: "radio03-2" %>
-          <label for="radio03-2" class="radio">ショート</label>
-          <%= f.radio_button :hair_style, "ミディアム", id: "radio04" %>
-          <label for="radio04" class="radio">ミディアム</label>
-          <%= f.radio_button :hair_style, "セミロング", id: "radio05" %>
-          <label for="radio05" class="radio">セミロング</label>
-          <%= f.radio_button :hair_style, "ロング", id: "radio06" %>
-          <label for="radio06" class="radio">ロング</label>
+    <div class="row">
+      <div class="form-group form-align-left">
+        <div class="control-label">
+          <%= f.label :hair_style, "現在の髪型" %>
         </div>
+        <%= f.radio_button :hair_style, "ベリーショート", id: "radio03-1" %>
+        <label for="radio03-1" class="radio">ベリーショート</label>
+        <%= f.radio_button :hair_style, "ショート", id: "radio03-2" %>
+        <label for="radio03-2" class="radio">ショート</label>
+        <%= f.radio_button :hair_style, "ミディアム", id: "radio04" %>
+        <label for="radio04" class="radio">ミディアム</label>
+        <%= f.radio_button :hair_style, "セミロング", id: "radio05" %>
+        <label for="radio05" class="radio">セミロング</label>
+        <%= f.radio_button :hair_style, "ロング", id: "radio06" %>
+        <label for="radio06" class="radio">ロング</label>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :hair_type, "髪質" %>
-          </div>
-          <%= f.radio_button :hair_type, "直毛", id: "radio07" %>
-          <label for="radio07" class="radio">直毛</label>
-          <%= f.radio_button :hair_type, "ややクセ毛", id: "radio08" %>
-          <label for="radio08" class="radio">ややクセ毛</label>
-          <%= f.radio_button :hair_type, "クセ毛", id: "radio09" %>
-          <label for="radio09" class="radio">クセ毛</label>
+    </div>
+    <div class="row">
+      <div class="form-group form-align-left">
+        <div class="control-label">
+          <%= f.label :hair_type, "髪質" %>
         </div>
+        <%= f.radio_button :hair_type, "直毛", id: "radio07" %>
+        <label for="radio07" class="radio">直毛</label>
+        <%= f.radio_button :hair_type, "ややクセ毛", id: "radio08" %>
+        <label for="radio08" class="radio">ややクセ毛</label>
+        <%= f.radio_button :hair_type, "クセ毛", id: "radio09" %>
+        <label for="radio09" class="radio">クセ毛</label>
       </div>
+    </div>
 
-      <div class="row options-label">
-        可能なオプション
+    <div class="row options-label form-align-left">
+      可能なオプション
+    </div>
+    <div class="row user-form-options">
+      <div class="form-group form-align-left">
+        <%= f.check_box(:color, {id: "checkbox1"}) %>
+        <label for="checkbox1" class="checkbox">カラー</label>
+        <%= f.check_box(:hair_extension, {id: "checkbox02"}) %>
+        <label for="checkbox02" class="checkbox">エクステ</label>
       </div>
-      <div class="row user-form-options">
-        <div class="form-group">
-          <%= f.check_box(:color, {id: "checkbox1"}) %>
-          <label for="checkbox1" class="checkbox">カラー</label>
-          <%= f.check_box(:hair_extension, {id: "checkbox02"}) %>
-          <label for="checkbox02" class="checkbox">エクステ</label>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :email, "メールアドレス" %>
+          <span class="required">※必須</span>
         </div>
+        <%= f.email_field :email, class: 'form-control input-lg' %>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :reason, "理由" %>
-          </div>
-          <%= f.radio_button :reason, "節約のため", id: "radio10" %>
-          <label for="radio10" class="radio">節約のため</label>
-          <%= f.radio_button :reason, "モデルを目指しているため", id: "radio11" %>
-          <label for="radio11" class="radio">モデルを目指しているため</label>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :password, "パスワード" %>
+          <span class="required">※必須</span>
         </div>
+        <%= f.password_field :password, class: 'form-control input-lg' %>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :email, "メールアドレス" %>
-            <span class="required">※必須</span>
-          </div>
-          <%= f.email_field :email, class: 'form-control input-lg' %>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :password_confirmation, "パスワード（確認）" %>
+          <span class="required">※必須</span>
         </div>
+        <%= f.password_field :password_confirmation, class: 'form-control input-lg' %>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :password, "パスワード" %>
-            <span class="required">※必須</span>
-          </div>
-          <%= f.password_field :password, class: 'form-control input-lg' %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :password_confirmation, "パスワード（確認）" %>
-            <span class="required">※必須</span>
-          </div>
-          <%= f.password_field :password_confirmation, class: 'form-control input-lg' %>
-        </div>
-      </div>
-      <div class="row">
-        <%= f.submit "登録する", class: "btn btn-primary btn-lg" %>
-      </div>
-    <% end %>
-  </div>
+    </div>
+    <div class="row">
+      <%= f.submit "登録する", class: "btn btn-primary btn-lg" %>
+    </div>
+  <% end %>
 </div>
