--- a/app/views/users/staff_new.html.erb
+++ b/app/views/users/staff_new.html.erb
@@ -1,130 +1,142 @@
 <h1>新規会員登録</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for @user, url: staff_signup_path do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-
-      <div class="row">
-        <div class="form-group">
+<div class="signup-container">
+  <%= form_for(@user) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :name, "お名前/ニックネーム" %>
           <span class="required">※必須</span>
-          <%= f.text_field :name, class: 'form-control input-lg' %>
         </div>
+        <%= f.text_field :name, class: 'form-control input-lg' %>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="form-group">
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :birth, "生年月日" %>
           <span class="required">※必須</span>
-          <div class="form-inline hidden-sp">
-            <%= raw sprintf(
-              f.date_select(
-                :birth,
-                {
-                  start_year: 1951,
-                  end_year: Time.zone.now.year,
-                  default: Time.zone.now.ago(25.years),
-                  use_two_digit_numbers: true,
-                  date_separator: '%s'
-                },
-                { class: 'form-control input-lg' }
-              ),
-              '年 ', '月 ') + '日'
-            %>
-          </div>
-          <div class="form-inline visible-sp">
-            <%= raw sprintf(
-              f.date_select(
-                :birth,
-                {
-                  start_year: 1951,
-                  end_year: Time.zone.now.year,
-                  default: Time.zone.now.ago(25.years),
-                  use_two_digit_numbers: true
-                },
-                { class: 'form-control input-lg' }
-              )
-              )
-            %>
-          </div>
+        </div>
+        <div class="form-inline hidden-sp">
+          <%= raw sprintf(
+            f.date_select(
+              :birth,
+              {
+                start_year: 1951,
+                end_year: Time.zone.now.year,
+                default: Time.zone.now.ago(25.years),
+                use_two_digit_numbers: true,
+                date_separator: '%s'
+              },
+              { class: 'form-control input-lg' }
+            ),
+            '年 ', '月 ') + '日'
+          %>
+        </div>
+        <div class="form-inline visible-sp">
+          <%= raw sprintf(
+            f.date_select(
+              :birth,
+              {
+                start_year: 1951,
+                end_year: Time.zone.now.year,
+                default: Time.zone.now.ago(25.years),
+                use_two_digit_numbers: true
+              },
+              { class: 'form-control input-lg' }
+            )
+            )
+          %>
         </div>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :sex, "性別" %>
-            <span class="required">※必須</span>
-          </div>
-          <div class="radio-inline">
-            <%= f.radio_button :sex, "女性", id: "radio01" %>
-            <label for="radio01" class="radio">女性</label>
-          </div>
-          <div class="radio-inline">
-            <%= f.radio_button :sex, "男性", id: "radio02" %>
-            <label for="radio02" class="radio">男性</label>
-          </div>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :sex, "性別" %>
+          <span class="required">※必須</span>
         </div>
-      </div>
-      <script>
-        $(function() {
-          $('#user_prefecture_id').change(function() {
-            var prefecture_id = $("#user_prefecture_id").val();
-            if (prefecture_id !== "") {
-              $.get("<%= prefectures_areas_path %>",
-                { prefecture_id: prefecture_id },
-                function(data){ }
-              );
-            }
-          });
-        });
-      </script>
+        <div class="radio-inline">
+          <%= f.radio_button :sex, "女性", id: "radio01" %>
+          <label for="radio01" class="radio">女性</label>
+        </div>
+        <div class="radio-inline">
+          <%= f.radio_button :sex, "男性", id: "radio02" %>
+          <label for="radio02" class="radio">男性</label>
+        </div>
 
-      <div class="row">
-        <div class="form-group">
+      </div>
+
+    </div>
+    <script>
+      $(function() {
+        $('#user_prefecture_id').change(function() {
+          var prefecture_id = $("#user_prefecture_id").val();
+          if (prefecture_id !== "") {
+            $.get("<%= prefectures_areas_path %>",
+              { prefecture_id: prefecture_id },
+              function(data){ }
+            );
+          }
+        });
+      });
+    </script>
+
+    <div class="row">
+      <div class="form-group">
+        <%= f.fields_for :thumbnails do |thumbnail| %>
+          <%= thumbnail.file_field :image, class: " input-lg" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :prefecture_id, "都道府県" %>
           <span class="required">※必須</span>
           <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {selected: 12}, class: 'form-control input-lg' %>
         </div>
       </div>
-      <div class="row">
-        <div class="form-group">
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
           <%= f.label :area_id, "市区町村" %>
           <span class="required">※必須</span>
-          <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg' %>
         </div>
+        <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg' %>
       </div>
-
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :email, "メールアドレス" %>
-            <span class="required">※必須</span>
-          </div>
-          <%= f.email_field :email, class: 'form-control input-lg' %>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :email, "メールアドレス" %>
+          <span class="required">※必須</span>
         </div>
+        <%= f.email_field :email, class: 'form-control input-lg' %>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :password, "パスワード" %>
-            <span class="required">※必須</span>
-          </div>
-          <%= f.password_field :password, class: 'form-control input-lg' %>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :password, "パスワード" %>
+          <span class="required">※必須</span>
         </div>
+        <%= f.password_field :password, class: 'form-control input-lg' %>
       </div>
-      <div class="row">
-        <div class="form-group">
-          <div class="control-label">
-            <%= f.label :password_confirmation, "パスワード（確認）" %>
-            <span class="required">※必須</span>
-          </div>
-          <%= f.password_field :password_confirmation, class: 'form-control input-lg' %>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :password_confirmation, "パスワード（確認）" %>
+          <span class="required">※必須</span>
         </div>
+        <%= f.password_field :password_confirmation, class: 'form-control input-lg' %>
       </div>
-      <div class="row">
-        <%= f.submit "登録する", class: "btn btn-primary btn-lg" %>
-      </div>
-    <% end %>
-  </div>
+    </div>
+    <div class="row">
+      <%= f.submit "登録する", class: "btn btn-primary btn-lg" %>
+    </div>
+  <% end %>
 </div>
