--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -9,7 +9,7 @@
         <%= f.text_field :memo, class: 'form-control' %>
       </div>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "応募する", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
