--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -6,7 +6,7 @@
       <%= render 'shared/error_messages', object: f.object %>
 
       <div class="form-group">
-        <%= f.label :content, "内容" %>
+        <%= f.label :content, "タイトル" %>
         <%= f.text_field :content, class: 'form-control' %>
       </div>
         <script>
@@ -55,7 +55,7 @@
           </div>
         </div>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "投稿する", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
