--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -4,5 +4,5 @@
   <input type="hidden" name="room_id" value="<%= room_id %>">
   <label><%= to_user.name %>さんにメッセージを送る↓</label><br>
   <textarea class="" type="text" data-behavior="chat_speaker"></textarea>
-<button class='chat_submit' type="button">送信</button>
+  <button class='chat_submit btn-primary' type="button">送信</button>
 </form>
