--- a/app/views/users/staff_new.html.erb
+++ b/app/views/users/staff_new.html.erb
@@ -44,7 +44,7 @@
                 default: Time.zone.now.ago(25.years),
                 use_two_digit_numbers: true
               },
-              { class: 'form-control input-lg' }
+              { class: 'input-lg col-sm-4 col-xs-4 birth-form-sp' }
             )
             )
           %>
