--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,9 +15,11 @@
 
       <div class="row">
         <div class="form-group">
-          <%= f.label :birth, "生年月日" %>
-          <span class="required">※必須</span>
-          <div class="form-inline">
+          <div class="control-label form-align-left">
+            <%= f.label :birth, "生年月日" %>
+            <span class="required">※必須</span>
+          </div>
+          <div class="form-inline hidden-sp">
             <%= raw sprintf(
               f.date_select(
                 :birth,
@@ -31,6 +33,21 @@
                 { class: 'form-control input-lg' }
               ),
               '年 ', '月 ') + '日'
+            %>
+          </div>
+          <div class="form-inline visible-sp">
+            <%= raw sprintf(
+              f.date_select(
+                :birth,
+                {
+                  start_year: 1951,
+                  end_year: Time.zone.now.year,
+                  default: Time.zone.now.ago(25.years),
+                  use_two_digit_numbers: true
+                },
+                { class: 'input-lg col-sm-4 col-xs-4 birth-form-sp' }
+              )
+              )
             %>
           </div>
         </div>
@@ -70,9 +87,9 @@
       <div class="row">
         <div class="form-group">
           <div class="control-label form-align-left">
-            <%= f.label :image %>
+            <%= f.label :image, "写真（髪型がわかるように正面から）" %>
           </div>
-          <%= f.file_field :image, class: "form-control input-lg" %>
+          <%= f.file_field :image, id: "user_img", class: "form-control input-lg" %>
         </div>
       </div>
       <div class="row">
