--- a/app/assets/stylesheets/user_form.scss
+++ b/app/assets/stylesheets/user_form.scss
@@ -129,3 +129,8 @@ input[type=radio], input[type=checkbox] {
 .birth-form-sp {
   background-color: white;
 }
+
+textarea {
+  font-size: 16px;
+  transform: scale(0.8);
+}
