--- a/app/assets/stylesheets/user_form.scss
+++ b/app/assets/stylesheets/user_form.scss
@@ -130,7 +130,8 @@ input[type=radio], input[type=checkbox] {
   background-color: white;
 }
 
-textarea {
-  font-size: 16px;
-  transform: scale(0.8);
+.message_form {
+  .form-control {
+    font-size: 16px;
+  }
 }
