--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -35,8 +35,8 @@
           <tr>
           <th>投稿者</th>
           <td class=""><%= link_to micropost.user.name, user_path(micropost.user) %></td>
-          <th class="">目的</th>
-          <td class=""><%= micropost.reason %></td>
+          <th class="">-</th>
+          <td class="">-</td>
           </tr>
           <tr>
           <th>カラー</th>
