--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -23,8 +23,8 @@
       <tr>
       <th>投稿者</th>
       <td class=""><%= @micropost.user.name %></td>
-      <td class="">目的</td>
-      <td class=""><%= @micropost.reason %></td>
+      <td class="">-</td>
+      <td class="">-</td>
       </tr>
       <tr>
       <th>カラー</th>
