--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -148,17 +148,15 @@
             <label for="checkbox01" class="checkbox">カラー</label>
             <%= f.check_box(:hair_extension, {id: "checkbox02"}) %>
             <label for="checkbox02" class="checkbox">エクステ</label>
+            <%= f.check_box(:nail, {id: "checkbox03"}) %>
+            <label for="checkbox03" class="checkbox">ネイル</label>
           </div>
         </div>
         <div class="row">
-          <div class="form-group">
-            <div class="control-label">
-              <%= f.label :reason, "理由" %>
-            </div>
-            <%= f.radio_button :reason, "節約のため", id: "radio10" %>
-            <label for="radio10" class="radio">節約のため</label>
-            <%= f.radio_button :reason, "モデルを目指しているため", id: "radio11" %>
-            <label for="radio11" class="radio">モデルを目指しているため</label>
+          <div class="form-group form-align-left">
+            <%= f.check_box(:use, {id: "checkbox04"}) %>
+            <label for="checkbox04" class="checkbox">撮影/宣伝利用</label>
+            ※美容院/美容師の宣伝用の使用を許可する
           </div>
         </div>
       <% end %>
