--- a/app/views/users/staff_new.html.erb
+++ b/app/views/users/staff_new.html.erb
@@ -1,6 +1,6 @@
 <h1>新規会員登録</h1>
 <div class="signup-container">
-  <%= form_for(@user) do |f| %>
+  <%= form_for @user, url: staff_signup_path do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <div class="row">
       <div class="form-group">
@@ -106,6 +106,30 @@
           <span class="required">※必須</span>
         </div>
         <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group">
+        <div class="control-label form-align-left">
+          <%= f.label :experience, "美容師歴" %>
+        </div>
+        <%= f.select :experience, options_for_select(User.experiences), {include_blank: true}, class: "form-control input-lg" %>
+        もしくは
+        <div class="control-label form-align-left">
+          <%= f.label :qualification, "美容師免許取得時期(予定)" %>
+        </div>
+        <div class="form-inline">
+          <%= f.date_select(
+            :qualification, {
+              start_year: Time.now.year,
+              end_year:   (Time.now.year + 5),
+              default:    Date.new(1989, 1, 1),
+              discard_day: true,
+              include_blank: true
+            },
+            {class: "form-control input-lg"})
+          %>
+        </div>
       </div>
     </div>
     <div class="row">
