--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,52 +1,78 @@
 <div class="post-container">
-  <div class="row">
-    <% if current_user.present? && current_user.staff == true %>
-      <%= link_to "投稿する", new_micropost_path %>
-    <% end %>
-  </div>
-  <% @microposts.each do |micropost| %>
+  <% if current_user.present? && current_user.staff == true %>
     <div class="row">
-      <table class="table table-striped table-bordered table-hover table-condensed">
-    		<thead>
-    			<tr class="info">
-    				<th colspan="4">
-              <%= micropost.content %> <%= link_to "詳細情報を見る", micropost_path(micropost) %>
-    				</th>
-    			</tr>
-    		</thead>
-        <tbody>
-          <td colspan="4">
-            ここに内容が入る
-          </td>
-        </tbody>
-    		<tbody>
-          <tr>
-          <th class="">登録日</th>
-          <td class=""><%= micropost.created_at_to_date %></td>
-          <th class="">募集終了日</th>
-          <td class="">-</td>
-          </tr>
-          <tr>
-          <th>場所</th>
-          <td class=""><%= micropost.prefecture.name %> <%= micropost.area.name %></td>
-          <th class="">得意スタイル</th>
-          <td class="">-</td>
-          </tr>
-          <tr>
-          <th>投稿者</th>
-          <td class=""><%= link_to micropost.user.name, user_path(micropost.user) %></td>
-          <th class="">-</th>
-          <td class="">-</td>
-          </tr>
-          <tr>
-          <th>カラー</th>
-          <td class=""><%= micropost.color %></td>
-          <th class="">エクステ</th>
-          <td class=""><%= micropost.hair_extension %></td>
-          </tr>
-
-        </tbody>
-      </table>
+      <div class="col-md-4 post-btn">
+        <%= link_to "投稿する", new_micropost_path, class: "btn btn-default" %>
+      </div>
     </div>
   <% end %>
+  <div class="row">
+    <% @microposts.each do |micropost| %>
+      <div class="post-area col-md-5 col-md-offset-1 row">
+        <div class="post-area-left col-xs-8">
+          <div class="post-staff">
+            <%= link_to micropost.user.name, user_path(micropost.user) %>
+          </div>
+          <div class="post-title">
+            <%= micropost.title %>
+          </div>
+          <div class="post-tag">
+            <% if micropost.color.present? %>
+              <div class="post-tag-inner">
+                カラー
+              </div>
+            <% end %>
+            <% if micropost.hair_extension.present? %>
+              <div class="post-tag-inner">
+                エクステ
+              </div>
+            <% end %>
+            <% if micropost.sex.present? %>
+              <div class="post-tag-inner">
+                <%= micropost.sex %>
+              </div>
+            <% end %>
+            <% if micropost.free_cut.present? %>
+              <div class="post-tag-inner">
+                カット
+              </div>
+            <% end %>
+            <% if micropost.transport_cost.present? %>
+              <div class="post-tag-inner">
+                交通費支給
+              </div>
+            <% end %>
+            <% if micropost.hair_style.present? %>
+              <div class="post-tag-inner">
+                <%= micropost.hair_style %>
+              </div>
+            <% end %>
+            <% if micropost.hair_type.present? %>
+              <div class="post-tag-inner">
+                <%= micropost.hair_type %>
+              </div>
+            <% end %>
+            <% if micropost.nail.present? %>
+              <div class="post-tag-inner">
+                ネイル
+              </div>
+            <% end %>
+          </div>
+          <div class="post-address">
+            <div class="post-address-text">
+              <%= micropost.prefecture.name %> <%= micropost.area.name %>
+            </div>
+          </div>
+          <div class="post-content">
+            <%= micropost.content.truncate(20) %>
+          </div>
+        </div>
+        <div class="post-area-right col-xs-4">
+          <div class="post-detail-btn">
+            <%= link_to "詳細を見る", micropost_path(micropost), class: "btn btn-primary" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
