--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,41 +1,71 @@
 <div class="row">
-  <table class="table table-striped table-bordered table-hover table-condensed">
-		<thead>
-			<tr class="info">
-				<th colspan="4">
-          題名
-				</th>
-			</tr>
-		</thead>
-		<tbody>
-      <tr>
-      <th>登録日</th>
-      <td class=""><%= @micropost.created_at_to_date %></td>
-      <td class="">募集終了日</td>
-      <td class="">-</td>
-      </tr>
-      <tr>
-      <th>場所</th>
-      <td class=""><%= @micropost.prefecture.name %> <%= @micropost.area.name %></td>
-      <td class="">得意スタイル</td>
-      <td class="">-</td>
-      </tr>
-      <tr>
-      <th>投稿者</th>
-      <td class=""><%= @micropost.user.name %></td>
-      <td class="">-</td>
-      <td class="">-</td>
-      </tr>
-      <tr>
-      <th>カラー</th>
-      <td class=""><%= @micropost.color %></td>
-      <td class="">エクステ</td>
-      <td class=""><%= @micropost.hair_extension %></td>
-      </tr>
-
-    </tbody>
-  </table>
+  <div class="post-area row post-area-height">
+    <div class="post-area-left col-xs-8">
+      <div class="post-staff">
+        <%= link_to @micropost.user.name, user_path(@micropost.user) %>
+      </div>
+      <div class="post-title">
+        <%= @micropost.title %>
+      </div>
+      <div class="post-tag">
+        <% if @micropost.color.present? %>
+          <div class="post-tag-inner">
+            カラー
+          </div>
+        <% end %>
+        <% if @micropost.hair_extension.present? %>
+          <div class="post-tag-inner">
+            エクステ
+          </div>
+        <% end %>
+        <% if @micropost.sex.present? %>
+          <div class="post-tag-inner">
+            <%= @micropost.sex %>
+          </div>
+        <% end %>
+        <% if @micropost.free_cut.present? %>
+          <div class="post-tag-inner">
+            カット
+          </div>
+        <% end %>
+        <% if @micropost.transport_cost.present? %>
+          <div class="post-tag-inner">
+            交通費支給
+          </div>
+        <% end %>
+        <% if @micropost.hair_style.present? %>
+          <div class="post-tag-inner">
+            <%= @micropost.hair_style %>
+          </div>
+        <% end %>
+        <% if @micropost.hair_type.present? %>
+          <div class="post-tag-inner">
+            <%= @micropost.hair_type %>
+          </div>
+        <% end %>
+        <% if @micropost.nail.present? %>
+          <div class="post-tag-inner">
+            ネイル
+          </div>
+        <% end %>
+      </div>
+      <div class="post-address">
+        <div class="post-address-text">
+          <%= @micropost.prefecture.name %> <%= @micropost.area.name %>
+        </div>
+      </div>
+      <div class="post-content">
+        <%= simple_format(h(@micropost.content)) %>
+      </div>
+    </div>
+    <div class="post-area-right col-xs-4">
+      <div class="post-detail-btn">
+        <%= link_to "応募する", new_micropost_apply_path(@micropost), class: "btn btn-danger" %>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 <div class="row">
   <% if current_user.present? && current_user.staff == true %>
