--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -61,7 +61,7 @@
               <label for="radio02" class="radio">男性</label>
             </div>
             <div class="radio-inline">
-              <%= f.radio_button :sex, "どちらでも", id: "radio03" %>
+              <%= f.radio_button :sex, "男女問わず", id: "radio03" %>
               <label for="radio03" class="radio">どちらでも</label>
             </div>
           </div>
