--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -1,11 +1,11 @@
 <div class="user-index">
   <div class="container">
     <div class="search-hamburger-open-btn">
-      <i class="fa fa-chevron-left"></i>モデル検索画面を開く
+      <i class="fa fa-chevron-right"></i>モデル検索画面を開く
     </div>
     <div class="find-users">
       <div class="search-hamburger-close-btn">
-        <i class="fa fa-chevron-right"></i>モデル検索画面を閉じる
+        <i class="fa fa-chevron-left"></i>モデル検索画面を閉じる
       </div>
       <div class="search-form-inner">
         <%= form_tag(users_path, method: "get") do %>
