--- a/app/assets/stylesheets/search_form.scss
+++ b/app/assets/stylesheets/search_form.scss
@@ -7,12 +7,12 @@
     right: 0;
     left: 0;
     right: 0;
-
     z-index: 100;
     background-color: white;
-    padding-top: 80px;
+    padding: 80px 15px 15px 15px;
     overflow-y: scroll;
     height: 100%;
+
   }
   .search-form-inner {
     // height: 100%;
@@ -25,6 +25,12 @@
   position: absolute;
   top: 20px;
   right: 20px;
+  @include mq-up(xl) {
+    display: none;
+  }
+  i {
+    margin-right: 5px;
+  }
 }
 .search-hamburger-close-btn {
   display: none;
@@ -32,4 +38,7 @@
   top: 20px;
   right: 20px;
   z-index: 101;
+  i {
+    margin-right: 5px;
+  }
 }
