--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -50,7 +50,7 @@ $breakpoint-down: (
 
 input, textarea, select{
   font-size: 16px !important;
-  -webkit-appearance : none;
+  // -webkit-appearance : none;
 }
 
 // select {
