--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
-<li class="user-item col-md-4 col-sm-6">
+<li class="user-item">
   <% if user.image.present?  %>
-    <div><%= link_to image_tag(user.image_url), user_path(user) %></div>
+    <div><%= link_to cl_image_tag(user.image_url, width: 300, height: 300, crop: :fill, class: 'user-image'), user_path(user) %></div>
   <% else %>
     <div><%= link_to image_tag('/no-image.png', class: "no-image"), user_path(user) %></div>
   <% end %>
