--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<li class="user-item col-md-4 col-sm-6">
+<div class="user-item col-md-4 col-sm-6">
   <% if user.image.present?  %>
     <div><%= link_to cl_image_tag(user.image_url, width: 300, height: 300, crop: :fill, class: 'user-image'), user_path(user) %></div>
   <% else %>
@@ -14,4 +14,4 @@
                                     data: { confirm: "You sure?" } %>
     <% end %>
   <% end %>
-</li>
+</div>
