--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="post-container">
+<div class="post-container post-index">
   <% if current_user.present? && current_user.staff == true %>
     <div class="row">
       <div class="col-md-4 post-btn">
@@ -9,7 +9,7 @@
   <div class="row">
     <% @microposts.each do |micropost| %>
       <div class="post-area col-md-5 col-md-offset-1 row">
-        <div class="post-area-left col-xs-8">
+        <div class="post-area-left col-xs-10 col-sm-8 col-lg-7">
           <div class="post-staff">
             <%= link_to micropost.user.name, user_path(micropost.user) %>
           </div>
@@ -67,9 +67,13 @@
             <%= micropost.content.truncate(20) %>
           </div>
         </div>
-        <div class="post-area-right col-xs-4">
-          <div class="post-detail-btn">
-            <%= link_to "詳細を見る", micropost_path(micropost), class: "btn btn-primary" %>
+        <div class="post-area-right col-xs-2 col-sm-5 col-lg-4">
+
+          <div class="">
+            <%= link_to micropost_path(micropost), class: "visible-sp" do %>
+              <i class="fa fa-chevron-right"></i>
+            <% end %>
+            <%= link_to "詳細はこちら", micropost_path(micropost), class: "btn btn-primary hidden-sp" %>
           </div>
         </div>
       </div>
