--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row post-show">
   <div class="post-area row post-area-height">
     <div class="post-area-left col-xs-8">
       <div class="post-staff">
