--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -55,7 +55,6 @@
       <div class="form-group">
         <div class="control-label form-align-left">
           <%= f.label :sex, "性別" %>
-          <span class="required">※必須</span>
         </div>
         <div class="radio-inline">
           <%= f.radio_button :sex, "女性", id: "radio01" %>
@@ -140,7 +139,7 @@
     </div>
 
     <div class="row options-label form-align-left">
-      可能なオプション
+      施術可能なオプション
     </div>
     <div class="row user-form-options">
       <div class="form-group form-align-left">
@@ -148,15 +147,17 @@
         <label for="checkbox1" class="checkbox">カラー</label>
         <%= f.check_box(:hair_extension, {id: "checkbox02"}) %>
         <label for="checkbox02" class="checkbox">エクステ</label>
-        <%= f.check_box(:nail, {id: "checkbox03"}) %>
-        <label for="checkbox03" class="checkbox">ネイル</label>
+        <%= f.check_box(:hair_permed, {id: "checkbox03"}) %>
+        <label for="checkbox03" class="checkbox">パーマ</label>
+        <%= f.check_box(:nail, {id: "checkbox04"}) %>
+        <label for="checkbox04" class="checkbox">ネイル</label>
       </div>
     </div>
     <div class="row">
       <div class="form-group form-align-left">
-        <%= f.check_box(:use, {id: "checkbox04"}) %>
-        <label for="checkbox04" class="checkbox">撮影/宣伝利用</label>
-        ※美容院/美容師の宣伝用の使用を許可する
+        <%= f.check_box(:use, {id: "checkbox05"}) %>
+        <label for="checkbox05" class="checkbox">撮影/宣伝利用</label>
+        <div>※美容院/美容師の宣伝用の使用を許可する</div>
       </div>
     </div>
     <div class="row">
